--- a/templates/home.page.tmpl
+++ b/templates/home.page.tmpl
@@ -7,7 +7,9 @@ Home
 
 {{define "content"}}
 <div class="col-md-12">
-    <h1>Sup</h1>
+    <p>So basically this application can compress(not a big difference) a pdf file and also split based upon input</p>
+    <p>it was something that i need to do everytime or then but i dont want any online services to do that</p>
+    <p>i will make a merge one anytime soon</p>
 </div>
 {{end}}
 {{define "js"}}
